@@ -59,6 +59,7 @@ prefix="@prefix@"
 exec_prefix="@exec_prefix@"
 bindir="@bindir@"
 libdir="@libdir@"
+includedir="@includedir@"
 
 LIBS="@APRUTIL_EXPORT_LIBS@"
 INCLUDES="@APRUTIL_INCLUDES@"
@@ -103,7 +104,7 @@ thisdir="`cd $thisdir && pwd`"
 tmpbindir="`cd $bindir && pwd`"
 if test "$tmpbindir" = "$thisdir"; then
   location=installed
-elif test "$APR_SOURCE_DIR" = "$thisdir"; then
+elif test "$APU_SOURCE_DIR" = "$thisdir"; then
   location=source
 else
   location=build
@@ -142,7 +143,13 @@ while test $# -gt 0; do
     flags="$flags $LIBS"
     ;;
     --includes)
-    flags="$flags $INCLUDES"
+    if test "$location" = "installed"; then
+        flags="$flags -I$includedir $INCLUDES"
+    elif test "$location" = "source"; then
+        flags="$flags -I$APU_SOURCE_DIR/include $INCLUDES"
+    else
+        flags="$flags -I$thisdir/include -I$APU_SOURCE_DIR/include $INCLUDES"
+    fi
     ;;
     --ldflags)
     flags="$flags $LDFLAGS"
